# addki

./: .gitignore  README.md  addki.cabal  build.gradle
src/: Main.hs
src/main/java/addki/: AddkiApplication.java  TestServiceApplication.java
src/main/java/addki/config/: CleanupTask.java  LanguageDetectionConfig.java  RabbitConfig.java  SecurityConfig.java  SwaggerConfig.java
src/main/java/addki/controller/: EntryApiController.java  EntryController.java
src/main/java/addki/dao/: EntryRepository.java
src/main/java/addki/model/: Entry.java  EntryStatus.java
src/main/java/addki/model/projection/: LanguageOnly.java
src/main/java/addki/request/: CollectEntriesFormRequest.java  CollectEntriesRequest.java  CollectEntryRequest.java
src/main/java/addki/response/: CollectEntryResponse.java
src/main/java/addki/service/: EntryService.java
src/main/java/addki/service/impl/: DefaultEntryService.java  MockCollectors.java
src/main/java/expts/: TestServiceApplication.java
src/main/java/expts/config/: CleanupTask.java  SwaggerConfig.java
src/main/java/expts/controller/: EntryController.java  TestController.java
src/main/java/expts/dao/: EntryRepository.java
src/main/java/expts/model/: Entry.java  EntryStatus.java
src/main/java/expts/model/projection/: LanguageOnly.java
src/main/java/expts/request/: CollectEntryRequest.java
src/main/java/expts/service/: EntryService.java
src/main/resources/: application.yml
src/main/resources/templates/: index.html
src/test/java/addki/dao/: HashMapEntryRepository.java
src/test/resources/: application.yml
(+2 files in other folders)
