name:                addki
version:             0.1.0.0
description:         Add to Anki
author:              Darren Foong
maintainer:          darrenfoong@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable addki
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -Wincomplete-uni-patterns
  build-depends:       base,
                       yesod,
                       text
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wno-missing-home-modules
  build-depends:       base,
                       hspec,
                       hspec-discover
  default-language:    Haskell2010
